--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
     <h1 id="landingtitlte">SamyBot</h1>
     <h4 id="landingtext">The only bot you need on server!(still in dev)</h4>
     <h3 id="landingtext2">Report bugs: szulc@szymek.cf</h3>
-    <h2 id="landingtext3">Im bot developed by some 14 y.o. kiddo whos dumb</h2>
+    <h2 id="landingtext3">Im bot developed by some 14 y.o. kiddo</h2>
     
 
-    <p id="findmeon">Ucan find my dev on:</p>
+    <p id="findmeon">U can find my dev on:</p>
     <a href="https://www.youtube.com/channel/UC-KZ4WLEg_0Ybhv3ygutSkA"><img id="youtube" height="40" width="40" src="./src/img/youtube.webp"></a>
     <a href="https://discord.gg/XA2SyvZrNd"><img id="discord" height="40" width="40" src="./src/img/discord.webp"></a>
     <a href="https://twitch.tv/szuuuummi"><img id="twitch" height="40" width="65" src="./src/img/twitch.png"></a>
