--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 <body>
 
     <h1 id="landingtitlte">SamyBot</h1>
+    <button type="button">Add Me!</button>
     <h4 id="landingtext">The only bot you need on server!(still in dev)</h4>
     <h3 id="landingtext2">Report bugs: szulc@szymek.cf</h3>
     <h2 id="landingtext3">Im bot developed by some 14 y.o. kiddo</h2>
