--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <h1 id="landingtitlte">samy.tk</h1>
     <h4 id="landingtext">The only bot you need on your server!</h4>
     <h3 id="landingtext2">Report bugs: szulc@szymek.cf</h3>
-    <h2 id="landingtext3", href="https://samy.tk/invite/">more on my server!</h2>
+    <a id="landingtext3", href="https://samy.tk/invite/">more on my server!</a>
     
 
     <p id="findmeon">U can find my dev on on:</p>
