--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
 
-    <button href="https://discord.com/api/oauth2/authorize?client_id=935821455046885456&permissions=8&scope=bot%20applications.commands" class="button">Add me!</button>
+    <a href="https://discord.com/api/oauth2/authorize?client_id=935821455046885456&permissions=8&scope=bot%20applications.commands" class="button">Add me!</a>
     <h1 id="landingtitlte">samy.tk</h1>
     <h4 id="landingtext">The only bot you need on your server!</h4>
     <h3 id="landingtext2">Report bugs: szulc@szymek.cf</h3>
