--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <meta name="msapplication-config" content="./src/img/favicon/browserconfig.xml">
 </head>
 <body>
-    <div class ="container">
-    <button href="https://discord.com/api/oauth2/authorize?client_id=935821455046885456&permissions=8&scope=bot%20applications.commands" class="button button1">Add me!</button>
+    <div class ="container center">
+    <a href="https://discord.com/api/oauth2/authorize?client_id=935821455046885456&permissions=8&scope=bot%20applications.commands" class="button button1">Add me!</a>
     </div>
     <h1 id="landingtitlte">samy.tk</h1>
     <h4 id="landingtext">The only bot you need on your server!</h4>
